--- a/frontend/src/component/home.css
+++ b/frontend/src/component/home.css
@@ -90,7 +90,7 @@ input{
 ::placeholder{
     color: #e5e5e5;
 }
-button{
+#sumit-btn{
     margin-top: 50px;
     width: 100%;
     background-color: #ffffff;
