--- a/frontend/src/component/chat.css
+++ b/frontend/src/component/chat.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -70,15 +69,17 @@
     color: black;
     font-size: 25px;
     padding: 15px 25px;
+    text-transform: capitalize;
 }
 
 .messages
 {
     padding: 18px;
     height:33rem;
-    border: 2px solid white;
     overflow: scroll;
     scrollbar-width: none;
+    display: flex;
+    flex-direction: column;
 }
 #message
 {
@@ -90,10 +91,33 @@
     color: black;
     margin: 20px 0px;
 }
-.float-right
+.sender
 {
-    float: right;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 17px;
+    padding: 10px 10px;
+    background-color: rgb(36, 35, 35);
+    border-radius: 15px;
+    color: rgb(254, 252, 252);
+    margin: 20px 0px;
+    align-self: flex-end; /* Ensure sender messages align to the right */
+    max-width: 25rem;
 }
+.receiver
+{
+    display: flex;
+    justify-content: flex-start;
+    font-size: 17px;
+    padding: 10px 10px;
+    background-color: gray;
+    border-radius: 15px;
+    color: black;
+    margin: 20px 0px;
+    align-self: flex-start; /* Ensure receiver messages align to the left */
+    max-width: 25rem;
+}
+
 .send
 {
     display: flex;
@@ -101,9 +125,19 @@
     align-items: center;
 }
 
-.input-send
-{
+.input-send{
     color: white;
     font-size: 16px;
     padding: 10px;
+    border-radius: 15px;
+    background-color: gray;
+    color: black;
+    margin: 10px 10px;
+}
+.sendbtn{
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: white;
+    margin: 10px 5px 10px 15px;
 }
