--- a/frontend/src/component/messages/Messages.css
+++ b/frontend/src/component/messages/Messages.css
@@ -1,5 +1,8 @@
 .messages {
-    padding: 5% 0;
-    overflow: auto;
-    flex: auto;
-  }
+  padding: 5% 0;
+  overflow-y: auto;
+  flex: auto;
+  max-height: 20rem;
+  scrollbar-width: none;
+}
+
