--- a/frontend/src/component/input/input.css
+++ b/frontend/src/component/input/input.css
@@ -1,29 +1,33 @@
 .form {
-    display: flex;
-    border-top: 2px solid #D3D3D3;
-    height: 30px;
-  }
-  
-  .input {
-    border: none;
-    border-radius: 0;
-    padding: 5%;
-    width: 80%;
-    font-size: 1.2em;
-    color: black;
-  }
-  
-  input:focus, textarea:focus, select:focus{
-    outline: none;
-  }
-  
-  .sendButton {
-    color: #fff !important;
-    text-transform: uppercase;
-    text-decoration: none;
-    background: #2979FF;
-    padding: 20px;
-    display: inline-block;
-    border: none;
-    width: 20%;
-  }
+  display: flex;
+  border-top: 2px solid #D3D3D3;
+  height: 70px;
+}
+
+.input {
+  border: none;
+  border-radius: 0;
+  padding: 2%;
+  width: 80%;
+  font-size: 1em;
+  color: black;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+}
+
+.sendButton {
+  color: #fff !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #2979FF;
+  padding: 10px;
+  font-size: 15px;
+  display: inline-block;
+  border: none;
+  width: 20%;
+  cursor: pointer;
+}
